basic UI layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KanyeRest</string>
+    <string name="quote_day">Mensagem kanye do dia</string>
 </resources>
