--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">KanyeRest</string>
     <string name="quote_day">Mensagem kanye do dia</string>
+    <string name="action_settings">settings</string>
+    <string name="historico">Historico</string>
 </resources>
